--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ a {
 
 p {
   margin-bottom: 1.5em;
-    color: black;
+    color: #EEE;
     font-family: 'Montserrat', sans-serif;
 }
 x{
@@ -65,7 +65,7 @@ h1, h4, h5, h6 {
   margin: 0 0 30px 0; }
 
 h2{
-    color: #000;
+    color: #EEE;
   font-family: "Playfair Display", Georgia, serif;
   font-weight: 200;
   margin: 0 0 20px 0;
@@ -116,7 +116,7 @@ figure {
   width: 300px;
   position: fixed;
   z-index: 1001;
-    background-color: #4682b4;
+    background-color: #3d3d3d;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
@@ -129,7 +129,7 @@ figure {
       -o-transform: translateX(-300px);
       transform: translateX(-300px);
       padding-top: 4em;
-	  background-color: #4682b4;
+	  background-color: #3d3d3d;
         height: auto;
       } }
   #colorlib-aside .author-img {
@@ -522,15 +522,20 @@ font-family: "Montserrat", Georgia, serif;}
 
 .hire {
   padding: 2em;
-  background: #4682b4; }
-  .hire h2 {
-    line-height: 1.5; }
-  .hire .btn-hire {
+  background: #3d3d3d;
+  }
+
+.hire h2 {
+    line-height: 1.5;
+    }
+
+.hire .btn-hire {
     color: #000;
     text-transform: uppercase;
     letter-spacing: 1px;
-    bordeR: 1px solid #000;
-    padding: 2px 10px; }
+    border: 1px solid #000;
+    padding: 2px 10px;
+    }
 
 .fancy-collapse-panel .panel-default > .panel-heading {
   padding: 0; }
@@ -666,7 +671,7 @@ font-family: "Montserrat", Georgia, serif;}
   position: absolute;
   display: block;
   width: 4px;
-  background: #4682b4 ;
+  background: #3d3d3d ;
   top: 20px;
   bottom: 20px;
   margin-left: 29px; }
@@ -715,7 +720,7 @@ font-family: "Montserrat", Georgia, serif;}
 
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label {
   position: relative;
-  background: #4682b4;
+  background: #3d3d3d;
   padding: 1.5em;
   margin-left: 60px;
   -webkit-background-clip: padding-box;
@@ -744,7 +749,7 @@ font-family: "Montserrat", Georgia, serif;}
   font-weight: 500; }
 
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 a {
-  color: #000; }
+  color: #EEE; }
 
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 span {
   -webkit-opacity: .4;
